# hparser

./: Makefile.am  Makefile.in  api  configure  configure.ac  connecting.html  errors.html  exporting.html  hparser.doxyfile  index-refer.php  index.html  input.html  messages.html  output.html  parsing.html  structure.html  todo
api/html/: annotated.html  annotated.js  class____comm__message____.html  class____composite__data____.html  class____element__interface____.html  class____input__section____.html  (+306 more)
figures/: collect_scope.fig  conventional_tree.fig  downward_message.fig  hparser_tree.fig  iterated_input.fig  parallel_modify.fig  parallel_structure.fig  recursive_input.fig  return_scope.fig
headers/: comm-line.html  data-input.html  data-manager.html  file-manager.html  file-output.html  input-resource.html  multi-input.html  multi-output.html  output-resource.html  parent-storage.html  scope-locator.html  structure-base.html  triggered-update.html
include/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  comm-line.cpp  data-input.cpp  data-manager.cpp  data-output.cpp  descriptor-storage.cpp  file-manager.cpp  filo-scope.cpp  generic-file.cpp  input-control.cpp  interface-user.cpp  linked-section.cpp  multi-destination.cpp  multi-input.cpp  multi-output.cpp  multi-source.cpp  operators.cpp  output-control.cpp  parent-storage.cpp  resource-manager.cpp  standard-files.cpp  storage-section.cpp  string-all.cpp  structure-base.cpp  tag-constants.cpp  tag-properties.cpp  tagged-storage.cpp  triggered-update.cpp  verified-element.cpp  version.cpp
(+277 files in other folders)
