#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(hparser, 1.0.1, [Kevin P. Barry (ta0kira@users.berlios.de)])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile include/Makefile src/Makefile])
AC_CONFIG_SRCDIR([include/hparser/version.hpp])

# Checks for programs.
AC_PROG_LIBTOOL
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

# Checks for library functions.

AC_OUTPUT
